--- a/Changelog.txt
+++ b/Changelog.txt
@@ -2,7 +2,11 @@ Changelog:
 
   Support spiritual councillors for CleanSlates religion setup.
   Added Sardinian portraits.
+  Inluded East-Asain clothing sets from Tianxia.
   Fixed attack animation on French knights.
+  Some extra dragons.
+  Added an alternate divine glow effect.
+  Updated Tianxia submod for version 14.
 
 10-10-2022
   All clothes extended to a universal fit without shoulders clipping out.
